added FlatLaf dependency and fixed gradle.build